@@ -66,7 +66,7 @@
 		<!-- The folder used to set up the installer files -->
 		<product-pack-folder>pack/program</product-pack-folder>
 
-		<java.version>24</java.version>
+		<java.version>25</java.version>
 
 		<!-- Runtime dependencies -->
 		<!-- Version numbers reviewed 28 Apr 2025 -->
@@ -302,6 +302,7 @@
 						<!--										-javaagent:${org.mockito:mockito-core:jar}-->
 						-javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${bytebuddy.version}/byte-buddy-agent-${bytebuddy.version}.jar
 						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
+						-Dnet.bytebuddy.experimental
 					</argLine>
 				</configuration>
 			</plugin>
@@ -617,6 +618,7 @@
 										<!--										-javaagent:${org.mockito:mockito-core:jar}-->
 										-javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${bytebuddy.version}/byte-buddy-agent-${bytebuddy.version}.jar
 										-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
+										-Dnet.bytebuddy.experimental
 									</argLine>
 								</configuration>
 							</execution>
